--- a/index.qmd
+++ b/index.qmd
@@ -17,7 +17,7 @@ This enables simpler creation of websites that have automated checks for broken 
 Here is how you can include images in your website pages (this one is saved in `resources/images` to keep things tidy:
 
 ```{r, fig.align='center', fig.alt= "Example image", echo = FALSE, out.width="30%"}
-knitr::include_graphics("https://avatars.githubusercontent.com/u/234071721?s=200&v=4")
+knitr::include_graphics("assets/dsc_logo.png")
 ```
 
  
